--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.12",
     "@chakra-ui/core": "^1.0.0-rc.5",
     "@chakra-ui/icons": "^1.0.0-rc.5",
     "@emotion/react": "^11.1.5",
@@ -16,9 +17,11 @@
     "axios": "^0.21.1",
     "ethers": "^5.0.32",
     "framer-motion": "^3.9.1",
+    "graphql": "^15.5.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "subscriptions-transport-ws": "^0.9.18",
     "theme-ui": "^0.3.5",
     "use-wallet": "^0.8.1"
   }
