--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-infinite-scroller": "^1.2.4",
     "subscriptions-transport-ws": "^0.9.18",
     "theme-ui": "^0.3.5",
     "use-wallet": "^0.8.1"
